--- a/src/components/Spinner/Spinner.module.css
+++ b/src/components/Spinner/Spinner.module.css
@@ -6,7 +6,7 @@
     transform: rotate(360deg);
   }
 }
-.loading-spinner {
+.loading_spinner {
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
