--- a/src/pages/SignupLogin/Login.module.css
+++ b/src/pages/SignupLogin/Login.module.css
@@ -1,12 +1,25 @@
-.log {
+body {
+  margin: 0;
+  background: #c8c8c8;
+}
+.login_wrap {
+  width: 100%;
+  margin: 40px auto;
+  max-width: 525px;
+  min-height: 600px;
+  position: relative;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.login_html {
   width: 100%;
   height: 100%;
   position: absolute;
-  padding: 70px 70px 50px 70px;
+  padding: 90px 70px 50px 70px;
   background: rgba(255, 255, 255, 0.9);
 }
-.log .sign_up_component,
-.log .log_in_component {
+.login_form .log_in_component,
+.login_form .sign_up_component {
   top: 0;
   left: 0;
   right: 0;
@@ -16,11 +29,11 @@
   backface-visibility: hidden;
   transition: all 0.4s linear;
 }
-.log .log_in,
-.log .sign_up {
+.login_html .log_in,
+.login_html .sign_up {
   display: none;
 }
-.log .tab {
+.login_html .tab {
   font-size: 22px;
   margin-right: 15px;
   padding-bottom: 5px;
@@ -28,21 +41,26 @@
   display: inline-block;
   border-bottom: 2px solid transparent;
 }
-.log .log_in:checked + .tab,
-.log .sign_up:checked + .tab {
-  color: #1161ee;
-  border-color: #1161ee;
+.login_html .log_in:checked + .tab,
+.login_html .sign_up:checked + .tab {
+  color: #ba11ee;
+  border-color: #ba11ee;
 }
-.forms {
+.login_form {
   min-height: 345px;
   position: relative;
   perspective: 1000px;
   transform-style: preserve-3d;
 }
-
-.log .log_in:checked + .tab + .sign_up + .tab + .forms .log_in_component {
+.login_html
+  .log_in:checked
+  + .tab
+  + .sign_up
+  + .tab
+  + .login_form
+  .log_in_component {
   transform: rotate(0);
 }
-.log .sign_up:checked + .tab + .forms .sign_up_component {
+.login_html .sign_up:checked + .tab + .login_form .sign_up_component {
   transform: rotate(0);
 }
