--- a/src/components/Signup/Signup.module.scss
+++ b/src/components/Signup/Signup.module.scss
@@ -1,35 +1,50 @@
 $color: rgb(0, 0, 0);
 $display: block;
 $width: 100%;
+$textColorWhite: #fff;
+$fbColor: #1877f2;
+$twColor: #1da1f2;
+$goColor: #dd4b39;
+$igColor: #e4405f;
+$ghColor: #333;
+$pointer: pointer;
+$iconDim: 50px;
+$transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+$boxShadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+$textShadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+
+@mixin socialBtn($background, $color) {
+  background: $background;
+  color: $color;
+}
+@mixin general {
+  width: $width;
+  color: $color;
+  display: $display;
+}
+
 .group {
   margin-bottom: 15px;
   label {
-    width: $width;
-    color: $color;
-    display: $display;
-    color: rgb(35, 33, 33);
+    @include general;
     font-size: 12px;
   }
   input {
-    width: $width;
-    color: $color;
-    display: $display;
+    @include general;
     border: none;
     padding: 15px 20px;
     border-radius: 25px;
     background: rgba(125, 13, 186, 0.1);
   }
   .button {
-    width: $width;
-    color: $color;
-    display: $display;
+    @include general;
     height: 55px;
     border: none;
     border-radius: 5px;
     font-size: 17px;
     font-weight: 600;
     background-color: #9718c9;
-    cursor: pointer;
+    cursor: $pointer;
     &:hover {
       background-color: #9718c9db;
     }
@@ -40,99 +55,117 @@ $width: 100%;
   margin: 40px 0 30px 0;
   background: rgba($color, 0.2);
 }
-
 .wrapper {
-  display: inline-flex;
-  list-style: none;
-}
-
-.wrapper .icon {
-  position: relative;
-  background: #ffffff;
-  border-radius: 50%;
-  padding: 15px;
-  margin: 10px;
-  width: 50px;
-  height: 50px;
-  font-size: 18px;
   display: flex;
+  list-style: none;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.wrapper .tooltip {
-  position: absolute;
-  top: 0;
-  font-size: 14px;
-  background: #ffffff;
-  color: #ffffff;
-  padding: 5px 8px;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.wrapper .tooltip::before {
-  position: absolute;
-  content: "";
-  height: 8px;
-  width: 8px;
-  background: #ffffff;
-  bottom: -3px;
-  left: 50%;
-  transform: translate(-50%) rotate(45deg);
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.wrapper .icon:hover .tooltip {
-  top: -45px;
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.wrapper .icon:hover span,
-.wrapper .icon:hover .tooltip {
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
-}
-
-.wrapper .facebook:hover,
-.wrapper .facebook:hover .tooltip,
-.wrapper .facebook:hover .tooltip::before {
-  background: #1877f2;
-  color: #ffffff;
-}
-
-.wrapper .twitter:hover,
-.wrapper .twitter:hover .tooltip,
-.wrapper .twitter:hover .tooltip::before {
-  background: #1da1f2;
-  color: #ffffff;
-}
-
-.wrapper .instagram:hover,
-.wrapper .instagram:hover .tooltip,
-.wrapper .instagram:hover .tooltip::before {
-  background: #e4405f;
-  color: #ffffff;
-}
-
-.wrapper .github:hover,
-.wrapper .github:hover .tooltip,
-.wrapper .github:hover .tooltip::before {
-  background: #333333;
-  color: #ffffff;
-}
-
-.wrapper .youtube:hover,
-.wrapper .youtube:hover .tooltip,
-.wrapper .youtube:hover .tooltip::before {
-  background: #cd201f;
-  color: #ffffff;
+  
+  .icon {
+    position: relative;
+    background: #ffffff;
+    border-radius: 50%;
+    padding: 15px;
+    margin: 10px;
+    width: $iconDim;
+    height: $iconDim;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: $boxShadow;
+    cursor: $pointer;
+    transition: $transition;
+    &:hover {
+      .tooltip {
+        top: -45px;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+        text-shadow: $textShadow;
+      }
+      span {
+        text-shadow: $textShadow;
+      }
+    }
+  }
+  .tooltip {
+    position: absolute;
+    top: 0;
+    font-size: 14px;
+    background: #ffffff;
+    color: #ffffff;
+    padding: 5px 8px;
+    border-radius: 5px;
+    box-shadow: $boxShadow;
+    opacity: 0;
+    pointer-events: none;
+    transition: $transition;
+    &::before {
+      position: absolute;
+      content: "";
+      height: 8px;
+      width: 8px;
+      background: #ffffff;
+      bottom: -3px;
+      left: 50%;
+      transform: translate(-50%) rotate(45deg);
+      transition: $transition;
+    }
+  }
+  .facebook {
+    &:hover {
+      @include socialBtn($fbColor, $textColorWhite);
+      .tooltip {
+        @include socialBtn($fbColor, $textColorWhite);
+        &::before {
+          @include socialBtn($fbColor, $textColorWhite);
+        }
+      }
+    }
+  }
+  .twitter {
+    &:hover {
+      @include socialBtn($twColor, $textColorWhite);
+      .tooltip {
+        @include socialBtn($twColor, $textColorWhite);
+        &::before {
+          @include socialBtn($twColor, $textColorWhite);
+        }
+      }
+    }
+  }
+  .google {
+    &:hover {
+      @include socialBtn($goColor, $textColorWhite);
+      .tooltip {
+        @include socialBtn($goColor, $textColorWhite);
+        &::before {
+          @include socialBtn($goColor, $textColorWhite);
+        }
+      }
+    }
+  }
+  .instagram {
+    &:hover {
+      @include socialBtn($igColor, $textColorWhite);
+      .tooltip {
+        @include socialBtn($igColor, $textColorWhite);
+        &::before {
+          @include socialBtn($igColor, $textColorWhite);
+        }
+      }
+    }
+  }
+  .github {
+    &:hover {
+      @include socialBtn($ghColor, $textColorWhite);
+      .tooltip {
+        @include socialBtn($ghColor, $textColorWhite);
+        &::before {
+          @include socialBtn($ghColor, $textColorWhite);
+        }
+      }
+    }
+  }
 }
