Redirect after signing up

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -21,7 +21,7 @@ $width: 100%;
   }
   .button {
     width: $width;
-    color: $color;
+    color: white;
     display: $display;
     height: 55px;
     border: none;
