--- a/src/pages/SignupLogin/SignupLogin.module.scss
+++ b/src/pages/SignupLogin/SignupLogin.module.scss
@@ -9,6 +9,8 @@ $transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 $boxShadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 $textShadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 $pointer: pointer;
+$boxShadowForm: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
+0 17px 50px 0 rgba(0, 0, 0, 0.19);
 
 @mixin socialBtn($background, $color) {
   background: $background;
@@ -25,8 +27,7 @@ body {
   max-width: 525px;
   min-height: 600px;
   position: relative;
-  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: $boxShadowForm;
 }
 .login_html {
   width: 100%;
