--- a/src/components/Profiles/profile.module.css
+++ b/src/components/Profiles/profile.module.css
@@ -6,3 +6,30 @@
     align-items: center;
     margin-top: 10px;
 }
+
+.lists {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
+    list-style: none;
+}
+
+.lists > li {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  position: relative;
+  background-color: rgb(131, 131, 131);
+  margin: 20px;
+  max-width: 284px;
+  padding: 10px;
+}
+
+.lists > li > p {
+  text-decoration: none;
+  bottom: 0px;
+  right: 0px;
+  color: white;
+  width: 100%;
+  height: 20px;
+  font-size: 20px;
+}
