--- a/src/components/Profiles/profile.module.css
+++ b/src/components/Profiles/profile.module.css
@@ -33,3 +33,12 @@
   height: 20px;
   font-size: 20px;
 }
+
+.editProfile {
+  display: flex;
+  flex-direction: column;
+}
+
+.editProfile button {
+  width: 50%;
+}
