Added captcha to the login form

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -42,4 +42,10 @@ $width: 100%;
 }
 .foot_lnk {
   text-align: center;
+  margin-top: 20px;
+}
+.captcha {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
