--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,15 +6,30 @@ nav {
   height: 50px;
   background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
   z-index: 12;
-}
-.navbar {
-  list-style-type: none;
-  background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  .navbar {
+    list-style-type: none;
+    background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .items {
+    margin-right: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    position: relative;
+    a {
+      text-decoration: none;
+      color: #f1f1f1;
+      font-weight: 500;
+      &:hover {
+        color: #2c0db9;
+      }
+    }
+  }
 }
 .counter {
   width: 15px;
@@ -30,30 +45,16 @@ nav {
   top: -5px;
   right: -5px;
 }
-.notifications{
+.notifications {
   position: absolute;
   top: 50px;
   right: 0px;
   background-color: white;
-  color:black;
+  color: black;
   font-weight: 300;
   padding: 10px;
 }
-.items {
-  margin-right: 20px;
-  font-size: 20px;
-  text-transform: uppercase;
-  cursor: pointer;
-  position: relative;
-}
-.items a {
-  text-decoration: none;
-  color: #f1f1f1;
-  font-weight: 500;
-}
-.items a:hover {
-  color: #2c0db9;
-}
+
 nav input[type="checkbox"],
 nav .hamburger {
   display: none;
@@ -65,16 +66,16 @@ nav .hamburger {
     height: auto;
     opacity: 0.95;
   }
-  .items:nth-child(1) {
-    border-top: 1px solid rgba(255, 255, 255, 0.555);
-    margin-top: 50px;
-  }
   .items {
     width: 100%;
     border-top: 1px solid rgba(255, 255, 255, 0.555);
     text-align: center;
     margin-right: 0px;
     padding: 20px 0;
+    &:nth-child(1) {
+      border-top: 1px solid rgba(255, 255, 255, 0.555);
+      margin-top: 50px;
+    }
   }
   nav input[type="checkbox"],
   nav .hamburger {
@@ -101,24 +102,24 @@ nav .hamburger {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
-  nav .hamburger .hamburger__line {
-    display: block;
-    height: 4px;
-    width: 100%;
-    border-radius: 10px;
-    background: rgb(255, 255, 255);
-  }
-  nav .hamburger .line1 {
-    transform-origin: 0% 0%;
-    transition: transform 0.4s ease-in-out;
-  }
-  nav .hamburger .line2 {
-    transition: transform 0.2s ease-in-out;
-  }
-  nav .hamburger .line3 {
-    transform-origin: 0% 100%;
-    transition: transform 0.4s ease-in-out;
+    .hamburger__line {
+      display: block;
+      height: 4px;
+      width: 100%;
+      border-radius: 10px;
+      background: rgb(255, 255, 255);
+    }
+    .line1 {
+      transform-origin: 0% 0%;
+      transition: transform 0.4s ease-in-out;
+    }
+    .line2 {
+      transition: transform 0.2s ease-in-out;
+    }
+    .line3 {
+      transform-origin: 0% 100%;
+      transition: transform 0.4s ease-in-out;
+    }
   }
   /* Hamburger lines to change when navbar is toggled */
   nav input[type="checkbox"]:checked ~ .navbar {
