--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -1,3 +1,5 @@
+$auto: auto;
+$dim: 50px;
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
@@ -7,11 +9,11 @@
   }
 }
 .loading_spinner {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: $auto;
+  margin-right: $auto;
   margin-top: 40px;
-  width: 50px;
-  height: 50px;
+  width: $dim;
+  height: $dim;
   border: 10px solid #f10505;
   border-top: 10px solid #791f1f;
   border-radius: 50%;
