--- a/src/components/Profiles/Profiles.module.scss
+++ b/src/components/Profiles/Profiles.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   gap: 10px;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   margin-top: 10px;
 }
@@ -18,7 +17,7 @@
   position: relative;
   background-color: rgb(131, 131, 131);
   margin: 20px;
-  max-width: 284px;
+  width: 180px;
   padding: 10px;
 }
 .lists > li > p {
@@ -29,6 +28,12 @@
   width: 100%;
   height: 20px;
   font-size: 20px;
+}
+.lists_inside {
+  display: flex;
+  flex-direction: row;
+  align-items: left;
+  list-style: none;
 }
 .editProfile {
   display: flex;
