--- a/src/components/AnimeComponent/Anime.module.scss
+++ b/src/components/AnimeComponent/Anime.module.scss
@@ -1,25 +1,101 @@
-.anime {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  position: relative;
-  background: linear-gradient(
-    339deg,
-    rgba(80, 80, 80, 1) 0%,
-    rgba(255, 255, 255, 1) 51%
-  );
-  margin: 20px;
-  width: 120px;
-  height: 215px;
+$width_main: 120px;
+$height_main: 215px;
+$width_large: 200px;
+$height_large: 300px;
+@mixin anime($margin: 0, $width: $width_main, $height: $height_main) {
+  margin: $margin;
+  width: $width;
+  height: $height;
+}
+@mixin anime_img($width) {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: $width;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+}
+.synopsis {
+  h2 {
+    font-size: 35px;
+  }
+  h3 {
+    font-size: 12px;
+  }
+  ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 10px;
+    border: 2px solid #ddd;
+    background-color: #ddd;
+    li {
+      padding: 5px;
+      &:first-child {
+        border-right: 2px solid rgb(124, 124, 124);
+      }
+    }
+  }
+}
+.anime_tiny {
+  @include anime(20px);
+}
+.anime_small {
+ @include anime();
+}
+.anime_medium {
+  @include anime(20px);
+}
+.anime_large {
+  @include anime(20px, $width_large, $height_large);
 }
 .anime_Link {
   text-decoration: none;
+  position: relative;
   color: white;
   font-size: 5px;
   padding: 5px;
   padding-left: 0;
 }
-.anime_Link > img {
-  width: 120px;
+.anime_img_tiny {
+  @include anime_img(80px)
 }
+.anime_img_small {
+  @include anime_img(100px)
+}
+.anime_img_medium{
+  @include anime_img(150px)
+}
+.anime_img_large {
+  width: $width_large
+}
+.anime_Link img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+.anime_Link h1 {
+  position: absolute;
+  width: 120px;
+  bottom: 8px;
+  left: 16px;
+  font-size: 8px;
+}
+.animeDetails {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  p {
+    border-right: 2px solid rgb(124, 124, 124);
+    padding: 5px;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .container {
     display: flex;
