--- a/src/components/ListAnime/ListAnime.module.scss
+++ b/src/components/ListAnime/ListAnime.module.scss
@@ -1,10 +1,8 @@
 .list {
     display: flex;
-    gap: 10px;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
-    align-content: space-around;
     list-style: none;
   }
