changed some styles in profile

--- a/src/components/Profiles/Profiles.module.scss
+++ b/src/components/Profiles/Profiles.module.scss
@@ -6,7 +6,7 @@
   /* align-items: center; */
   margin-top: 10px;
 }
-.followCounters Link {
+.followCounters a {
   text-decoration: none;
 }
 .lists {
