--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -30,7 +30,7 @@ nav {
   top: -5px;
   right: -5px;
 }
-.notifications{
+.notifications {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -44,6 +44,15 @@ nav {
 .group {
   display: flex;
   flex-direction: row;
+}
+.group_profile {
+  display: flex;
+  flex-direction: row;
+  div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 .items {
   margin-right: 20px;
@@ -67,6 +76,10 @@ nav {
   cursor: pointer;
   position: relative;
   color: #f1f1f1;
+  button {
+    width: 100%;
+    height: 100%;
+  }
 }
 .profile a {
   text-decoration: none;
@@ -95,14 +108,31 @@ nav .hamburger {
     padding: 20px 0;
     &:nth-child(1) {
       border-top: 1px solid rgba(255, 255, 255, 0.555);
-      margin-top: 50px;
     }
   }
-  .profile {
+  .group {
+    flex-direction: column;
     width: 100%;
+  }
+  .group_profile {
+    width: 100%;
+    justify-content: space-between;
+  }
+  .logo {
+    margin-left: 60px;
+  }
+  .profile {
+    /* width: 5rem; */
+    margin: 0;
+    width: 20%;
+    height: 40%;
+    /* padding: 10px; */
     text-align: center;
-    margin-right: 20px;
-    padding: 20px 0;
+    align-self: center;
+    img {
+      /* margin-right: 20px; */
+      width: 100%;
+    }
   }
   .counter {
     top: 10px;
@@ -127,7 +157,7 @@ nav .hamburger {
     height: 23px;
     width: 35px;
     position: absolute;
-    top: 14px;
+    top: 20px;
     left: 20px;
     z-index: 2;
     display: flex;
