--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -13,14 +13,14 @@
 }
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
   width: 100%;
   gap: 10px;
 }
 .trending {
-  width: 390px;
+  width: 100%;
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
