--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,15 +1,31 @@
 .footer {
-    background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);;
-    padding: 20px;
+  background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
+  padding: 20px;
+  p {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer {
     p {
-        color: white;
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        justify-content: center;
+      font-size: 12px;
     }
-    a {
-        color: white;
-        text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  .footer {
+    p {
+      font-size: 9px;
     }
+  }
 }
