--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -21,7 +21,7 @@
 }
 .trending {
   width: 100%;
-  height: 270px;
+  height: auto;
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
