--- a/src/components/Profiles/Profiles.module.scss
+++ b/src/components/Profiles/Profiles.module.scss
@@ -5,6 +5,9 @@
   margin-right: 5px;
 	cursor: pointer;
 }
+.profileContainer {
+  margin: 10px;
+}
 .lists {
   display: flex;
   flex-direction: column;
