--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,6 @@
 .app {
   min-height: 100vh;
+  position: relative;
 }
 
 .content {
@@ -11,5 +12,11 @@
 @media screen and (min-width: 768px) {
   .content {
     flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .content {
+    padding: 5px;
   }
 }
