--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,9 @@
 .footer {
     background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);;
     padding: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     p {
         color: white;
         display: flex;
