--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,8 +4,18 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  display: flex;
+  justify-content: center;
   p {
     font-size: 12px;
+    color: white;
+    text-align: center;
+    display: flex;
+    gap: 10px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
   }
 }
 
