--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -40,6 +40,15 @@ nav {
   color: black;
   font-weight: 300;
   padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  a{
+    text-decoration: none;
+    padding: 5px;
+    &:not(:last-child) {
+      border-bottom: 2px solid #aaa;
+    }
+  }
 }
 .group {
   display: flex;
