--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,6 +10,12 @@
   min-height: 100vh;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
 @media screen and (max-width: 425px) {
   .content {
     padding: 5px;
