--- a/src/components/AnimeDropdown/AnimeDropdown.module.scss
+++ b/src/components/AnimeDropdown/AnimeDropdown.module.scss
@@ -1,45 +1,45 @@
+$color: white;
 .dropbtn {
-    background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown_content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    button {
-        background-color: #ab7fde;
-        color: white;
-        width: 100%;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        border: none;
-      }
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown_content button:hover {background-color: #8f58cd}
-  
+  background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
+  color: $color;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown_content {
+  &:hover {
+    .dropdown_content {
+      display: block;
+    }
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropbtn {
+      background-color: #3e8e41;
+    }
+  }
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown_content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  button {
+    background-color: #ab7fde;
+    color: $color;
+    width: 100%;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
+    border: none;
+    /* Change color of dropdown links on hover */
+    &:hover {
+      background-color: #8f58cd;
+    }
   }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-  }
+}
