--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,15 +1,16 @@
+$background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
 nav {
   box-shadow: 0px 5px 10px 0px #aaa;
   position: sticky;
   top: 0;
   width: 100%;
   height: 50px;
-  background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
+  background: $background;
   z-index: 12;
 }
 .navbar {
   list-style-type: none;
-  background: linear-gradient(45deg, rgb(156, 14, 156), midnightblue);
+  background: $background;
   height: 100%;
   display: flex;
   justify-content: space-between;
