--- a/src/components/Profiles/Profiles.module.scss
+++ b/src/components/Profiles/Profiles.module.scss
@@ -5,6 +5,7 @@
   margin-right: 5px;
   cursor: pointer;
 }
+$boxShadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 .profileContainer {
   margin: 10px;
   min-height: 100vh;
@@ -12,7 +13,7 @@
 .tab {
   background-color: rgb(131, 131, 131);
   color: white;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: $boxShadow;
   max-width: 284px;
   padding: 10px;
   width: 100%;
@@ -47,7 +48,7 @@
     transform: rotateY(180deg) scale(0);
     backface-visibility: hidden;
     transition: all 0.4s linear;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    box-shadow: $boxShadow;
     background-color: rgb(131, 131, 131);
     margin: 20px;
     padding: 10px;
