--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,20 @@
 .app {
+  display: flex;
   min-height: 100vh;
+  max-width: 1300px;
+  margin: 0 auto;
   position: relative;
+}
+
+.app__container {
+  width: 100vw;
+  height: 1200px;
+}
+
+.bar {
+  max-width: 200px;
+  max-height: 100vh;
+  margin: 10px;
 }
 
 .content {
@@ -11,13 +25,19 @@
 }
 
 .footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
+  position: fixed;
 }
 
 @media screen and (max-width: 425px) {
   .content {
     padding: 5px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .bar {
+    display: none;
   }
 }
