--- a/src/components/ListAnime/ListAnime.module.scss
+++ b/src/components/ListAnime/ListAnime.module.scss
@@ -1,7 +1,7 @@
 .list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     list-style: none;
   }
