--- a/src/components/AnimeComponent/Anime.module.scss
+++ b/src/components/AnimeComponent/Anime.module.scss
@@ -33,10 +33,8 @@ $height_large: 300px;
     flex-direction: row;
     list-style: none;
     gap: 10px;
-    border: 2px solid #ddd;
-    background-color: #ddd;
     li {
-      padding: 5px;
+      padding: 15px;
       &:first-child {
         border-right: 2px solid rgb(124, 124, 124);
       }
@@ -135,8 +133,11 @@ $height_large: 300px;
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   .container {
     align-items: flex-start;
+  }
+  .anime_medium {
+    margin:0 30px;
   }
 }
