--- a/src/components/ListOfComments/ListOfComments.module.scss
+++ b/src/components/ListOfComments/ListOfComments.module.scss
@@ -4,11 +4,15 @@ $margin: 20px;
   .comments_title {
     font-size: 30px;
     margin-bottom: $margin;
+    color: white;
   }
   .comments_form_title {
     font-size: 22px;
+    color: white;
   }
   .comments_container {
     margin-top: 2 * $margin;
+    background-color: rgb(240, 248, 255, 0.5);
+    border-radius: 5px;
   }
 }
