--- a/src/pages/Anime/Anime.module.scss
+++ b/src/pages/Anime/Anime.module.scss
@@ -1,5 +1,7 @@
 .container{
     padding: 12px;
+    background-color: rgb(240, 248, 255, 0.5);
+    border-radius: 5px;
 }
 .alert {
     position: absolute;
