--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,7 @@
 .app__container {
   width: 100vw;
   height: 1200px;
+  z-index: 1000;
 }
 
 .bar {
@@ -27,6 +28,7 @@
   bottom: 0;
   width: 100%;
   position: fixed;
+  z-index: 1100;
 }
 
 @media screen and (max-width: 425px) {
