--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,16 +2,17 @@
   display: flex;
   min-height: 100vh;
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0 auto 25px auto;
   position: relative;
 }
 
 .app__container {
   width: 100vw;
-  height: 1200px;
+  height: 100%;
 }
 
 .bar {
+  min-width: 200px;
   max-width: 200px;
   max-height: 100vh;
   margin: 10px;
